# BoltVulnScanner

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  creds.example.yaml  default_wordlist.txt  docker-compose.yml  example_usage.py  how_to_run.txt  presentation_notes.md  push_to_github.sh  pyproject.toml  requirements-optional.txt  requirements.txt  run_tests.py  setup.py  test_import.py
.github/workflows/: ci.yml
demo/: sample_bug_report.md  sample_scan_output.json  sample_target.html
src/: streamlit_app.py
src/boltvuln/: __init__.py  cli.py  cmd_injection.py  crawler.py  csrf_check.py  dir_enum.py  headers_check.py  open_redirect.py  orchestrator.py  ports.py  reporter.py  sqli.py  subdomain_enum.py  tls_check.py  traversal.py  utils.py  xss.py
tests/: __init__.py  test_orchestrator.py  test_utils.py
